Fix: SideScrollBar.module.scss

--- a/src/components/ui/sideScrollbar/SideScrollbar.module.scss
+++ b/src/components/ui/sideScrollbar/SideScrollbar.module.scss
@@ -1,14 +1,14 @@
 .siteScrollBar {
   position: fixed;
   top: 0;
-  right: 0px;
+  right: 0;
   width: 5px;
   height: 100vh;
   border-radius: 10px;
   overflow: hidden;
   z-index: 9999;
 
-  @media (max-width: 800) {
+  @media (max-width: 800px) {
     display: none;
   }
 }
@@ -18,13 +18,16 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 180px;
   background: linear-gradient(180deg, #8655f7, #4e21a8);
   border-radius: 10px;
-  transition: transform 0.1s linear;
   cursor: grab;
 
   &:active {
     cursor: grabbing;
+  }
+
+  /* Drag учурунда transition өчүрүлөт, scroll үчүн гана колдон */
+  &.scrolling {
+    transition: transform 0.1s linear;
   }
 }
